--- a/net-misc/openntpd/files/openntpd.rc
+++ b/net-misc/openntpd/files/openntpd.rc
@@ -1,10 +1,11 @@
 #!/sbin/runscript
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/openntpd/files/openntpd.rc,v 1.5 2007/04/24 13:09:30 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/openntpd/files/openntpd.rc,v 1.6 2008/06/08 21:48:13 bangert Exp $
 
 depend() {
 	need net
+	after ntp-client
 	use dns logger
 }
 
